--- a/GOMVC/Views/Saldos_Cartera/Index.cshtml
+++ b/GOMVC/Views/Saldos_Cartera/Index.cshtml
@@ -19,7 +19,7 @@
                 <input type="number" class="form-control" id="idCredito" name="idCredito" value="@ViewData["IdCredito"]" />
             </div>
             <div class="form-group">
-                <label for="idPersona">IdPersona</label>
+                <label for="idPersona">Id_Persona</label>
                 <input type="number" class="form-control" id="idPersona" name="idPersona" value="@ViewData["IdPersona"]" />
             </div>
             <div class="form-group">
@@ -52,13 +52,12 @@
     <div class="col-md-9">
         <!-- Data Table with Scrollbars -->
         <div style="overflow-x: auto; overflow-y: auto; max-height: 400px;">
-            <!-- Table content goes here -->
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Id_Solicitud</th>
                         <th>Id_Credito</th>
-                        <th>IdPersona</th>
+                        <th>Id_Persona</th>
                         <th>Referencia</th>
                         <th>Afiliado</th>
                         <th>Nombre</th>
@@ -158,7 +157,7 @@
                         <tr>
                             <td>@item.Id_Solicitud</td>
                             <td>@item.Id_Credito</td>
-                            <td>@item.IdPersona</td>
+                            <td>@item.Id_Persona</td>
                             <td>@item.Referencia</td>
                             <td>@item.Afiliado</td>
                             <td>@item.Nombre</td>
