--- a/GOMVC/Views/User/Index.cshtml
+++ b/GOMVC/Views/User/Index.cshtml
@@ -15,12 +15,12 @@
 
 <form asp-action="Login" method="post">
     <div class="form-group">
-        <label asp-for="USERNAME"></label>
-        <input asp-for="USERNAME" class="form-control" />
+        <label asp-for="Username"></label>
+        <input asp-for="Username" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="PASSWORD"></label>
-        <input asp-for="PASSWORD" type="password" class="form-control" />
+        <label asp-for="Password"></label>
+        <input asp-for="Password" type="password" class="form-control" />
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
